# private-id-web

./: .gitignore  .gitmodules  Cargo.toml  LICENSE_MIT  README.md  index.html  package-lock.json  package.json
common/: demo.js  io.js  (+1 more)
src/: Cargo.toml  js.rs  lib.rs  utils.rs  wrappers.rs
src/alib/: arithmetic.rs  mod.rs
src/example/: example.txt  help.txt
src/example/random_inputs/: input_a_size_10_cols_0.csv  input_a_size_20_cols_20.csv  input_a_size_2_cols_0.csv  input_b_size_20_cols_2.csv  input_b_size_2_cols_0.csv
src/lib/: .gitignore  Cargo.toml  README.md  build_log.txt  rustfmt.toml
src/lib/common/: Cargo.toml
src/lib/common/datagen/: datagen.rs
src/lib/common/src/: files.rs  lib.rs  permutations.rs  timer.rs  vectors.rs
src/lib/common/tests/: files_csv_test.rs
src/lib/crypto/: Cargo.toml
src/lib/crypto/benches/: he_benchmark.rs
src/lib/crypto/src/: RNG.rs  eccipher.rs  he.rs  lib.rs  prelude.rs  random.rs  spoint.rs
src/lib/example/: email_company.csv  email_partner.csv  example.sh  private-ids.txt
src/lib/example/random_inputs/: input_a_size_20_cols_0.csv  input_a_size_20_cols_2.csv  input_b_size_10_cols_0.csv  input_b_size_20_cols_0.csv  input_b_size_20_cols_20.csv
src/lib/protocol/: Cargo.toml
src/lib/protocol-rpc/: Cargo.toml  build.rs
src/lib/protocol-rpc/proto/: common.proto  crosspsi.proto  pjc.proto  privateid.proto
src/lib/protocol-rpc/src/: lib.rs
src/lib/protocol/src/: fileio.rs  lib.rs
src/lib/wrappers/: Cargo.toml
src/lib/wrappers/src/: lib.rs  wrappers.rs
src/wrappers/: lib.rs
src/wrappers/test/: mod.rs
(+52 files in other folders)
