[package]
name = "wrappers"
version = "0.1.0"
authors = []
edition = "2018"

[[bin]]
name = "private-id-test"
path = "wrappers/test/mod.rs"

[lib]
name = "wrappers"
path = "wrappers/lib.rs"

[features]
avx2 = ["crypto/avx2"]

[dependencies]
common = {path = "lib/common", version = "0.1.0"}
crypto = {path = "lib/crypto", version = "0.1.0"}
protocol = {path = "lib/protocol", version = "0.1.0"}
lazy_static = "0.2"

env_logger = "0.7.1"
tokio = { version = "0.2", features = ["macros"] }
