[package]
name = "crypto"
version = "0.1.0"
authors = []
edition = "2018"

[features]
avx2 = ["curve25519-dalek/simd_backend"]

[dependencies]
log = "0.4"
env_logger = "0.7.1"
sha2 = "0.8.0"
hex = "0.4.0"
rand = "0.7.3"
rand_core = "0.5.1"
#rand_core = { version = "0.3.1", features = ["stdweb"] }
#rdrand = "0.7.0"
curve25519-dalek = { git = "https://github.com/wyatt-howe/curve25519-dalek.git", tag = "10.0.1"}
rayon = "1.3.0"
serde = { version = "1.0.104", features = ["derive"] }  # "1.0.104"
bincode = "1.2.1"

[dev-dependencies]
criterion = "0.2"
